# ahrs-maxmsp

./: .gitmodules  CMakeLists.txt  README.md
source/ahrs/: CMakeLists.txt  ahrs.c
